	  now, for efficiency, rather than Query::execute().

	o Removed Connection::infoo().  Apparently just there to
	  save you from a typo when calling the info() method, since
	  it was a mere alias.

	o Renamed Connection::real_connect() to connect(), gave
	  several more of its parameters defaults, and removed old
	  connect() function.  Then changed user manual and examples
	  to use new APIs.

	o Renamed Connection::read_option() to set_option() and
	  made it return true/false on success instead of zero/nonzero.

	o Removed query-building functions (exec*(), store*(),
	  use()) from class Connection, and moved all the implementation
	  code to class Query.  Query no longer delegates the final
	  step of sending the query to the database server to
	  Connection().

	o Extracted exception disabling mechanism out of the many
	  classes that had the feature into a new OptionalExceptions
	  base class, which all classes having this feature now
	  derive from.  Also, removed all per-method exception
	  handling flags.  Finally, added NoExceptions class.  With
	  all of these changes, there is now a common way to disable
	  exceptions with fine granularity on all objects that
	  support the feature.

	o All custom MySQL++ exceptions now derive from the new
	  Exceptions class.  This regularizes the exception interface
	  and allows you to use a single catch() block if you want.

	o The "throw exceptions" flag is passed from parent to child
	  in all situations now.  (Or if not, please report it as
	  a bug.) This fulfills a promise made in the v1.7.9 user
	  manual, with the cost being that some programs will see
	  new exceptions thrown that they're not expecting.

	o Added a bunch of new exception types: ConnectionFailed,
	  DBSelectionFailed, EndOfResults, EndOfResultSets, LockFailed,
	  and ObjectNotInitialized.  Some of these replace the use of
	  BadQuery, which in v1.7.x was a kind of generic exception,
	  thrown when something more specific wasn't available.